package com.example.vag.model;

import lombok.Getter;
import lombok.Setter;
import lombok.NoArgsConstructor;
import lombok.EqualsAndHashCode;
import org.springframework.web.multipart.MultipartFile;

import javax.persistence.*;
import javax.validation.constraints.NotEmpty;
import java.time.LocalDate;
import java.util.HashSet;
import java.util.List;
import java.util.Set;

@Entity
@Table(name = "artworks")
@Getter
@Setter
@NoArgsConstructor
@EqualsAndHashCode(exclude = {"exhibitions", "user", "artworkLikes", "comments"})
public class Artwork {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @NotEmpty(message = "Название не может быть пустым")
    @Column(nullable = false)
    private String title;

    @NotEmpty(message = "Описание не может быть пустым")
    @Column(columnDefinition = "TEXT")
    private String description;

    @ManyToMany
    @JoinTable(
            name = "artwork_category",
            joinColumns = @JoinColumn(name = "artwork_id"),
            inverseJoinColumns = @JoinColumn(name = "category_id")
    )
    private Set<Category> categories = new HashSet<>();

    @Transient
    private List<Long> categoryIds;

    @Column(nullable = false)
    private String imagePath;

    @Transient
    private MultipartFile imageFile;

    @Column(nullable = false)
    private LocalDate dateCreation;

    @ManyToMany(mappedBy = "artworks")
    private Set<Exhibition> exhibitions = new HashSet<>();

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_id", nullable = false)
    private User user;

    @Column(nullable = false)
    private String status; // PENDING, APPROVED, REJECTED

    @Column(columnDefinition = "TEXT")
    private String rejectionReason; // Причина отклонения публикации

    @Column(nullable = false)
    private int likes = 0;

    @Column(nullable = true)
    private Integer averageRed;

    @Column(nullable = true)
    private Integer averageGreen;

    @Column(nullable = true)
    private Integer averageBlue;

    @Column(columnDefinition = "TEXT")
    private String colorHistogram;

    @Column(columnDefinition = "TEXT")
    private String detectedObjects;

    @Column(nullable = false)
    private int views = 0;

    @Column(columnDefinition = "TEXT")
    private String aiReport;

    @Column(columnDefinition = "TEXT")
    private String artistComment;

    @Column
    private Long similarArtworkId;

    @Column
    private String similarArtworkTitle;

    @Column(nullable = false)
    private int complaintCount = 0;

    @Column(columnDefinition = "TEXT")
    private String lastComplaintReason;

    @Transient
    private Integer matchPercentage;

    @OneToMany(mappedBy = "artwork", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<Like> artworkLikes;

    @OneToMany(mappedBy = "artwork", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<Comment> comments;

    @PrePersist
    protected void onCreate() {
        dateCreation = LocalDate.now();
    }

    public enum ArtworkStatus {
        PENDING, APPROVED, REJECTED
    }

    public void setImageFile(MultipartFile imageFile) {
        this.imageFile = imageFile;
    }

    public List<Long> getCategoryIds() {
        return categoryIds;
    }

    public void setCategoryIds(List<Long> categoryIds) {
        this.categoryIds = categoryIds;
    }

    public MultipartFile getImageFile() {
        return imageFile;
    }

    public Long getId() {
        return id;
    }

    public String getTitle() {
        return title;
    }

    public String getDescription() {
        return description;
    }

    public String getImagePath() {
        return imagePath;
    }

    public LocalDate getDateCreation() {
        return dateCreation;
    }

    public Set<Exhibition> getExhibitions() {
        return exhibitions;
    }

    public User getUser() {
        return user;
    }

    public String getStatus() {
        return status;
    }

    public Long getSimilarArtworkId() { return similarArtworkId; }
    public void setSimilarArtworkId(Long similarArtworkId) { this.similarArtworkId = similarArtworkId; }

    public String getSimilarArtworkTitle() { return similarArtworkTitle; }
    public void setSimilarArtworkTitle(String similarArtworkTitle) { this.similarArtworkTitle = similarArtworkTitle; }

    public String getAiReport() { return aiReport; }
    public void setAiReport(String aiReport) { this.aiReport = aiReport; }
    public String getRejectionReason() {
        return rejectionReason;
    }

    public void setRejectionReason(String rejectionReason) {
        this.rejectionReason = rejectionReason;
    }

    public int getLikes() {
        return likes;
    }

    public int getViews() {
        return views;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public void setTitle(String title) {
        this.title = title;
    }

    public void setDescription(String description) {
        this.description = description;
    }

    public void setImagePath(String imagePath) {
        this.imagePath = imagePath;
    }

    public void setDateCreation(LocalDate dateCreation) {
        this.dateCreation = dateCreation;
    }

    public void setExhibitions(Set<Exhibition> exhibitions) {
        this.exhibitions = exhibitions;
    }

    public void setUser(User user) {
        this.user = user;
    }

    public void setStatus(String status) {
        this.status = status;
    }

    public void setLikes(int likes) {
        this.likes = likes;
    }

    public void setViews(int views) {
        this.views = views;
    }

    public void setArtworkLikes(List<Like> artworkLikes) {
        this.artworkLikes = artworkLikes;
    }

    public void setComments(List<Comment> comments) {
        this.comments = comments;
    }

    public Set<Category> getCategories() {
        return categories;
    }

    public void setCategories(Set<Category> categories) {
        this.categories = categories;
    }

    public List<Like> getArtworkLikes() {
        return artworkLikes;
    }

    public List<Comment> getComments() {
        return comments;
    }

    public Integer getMatchPercentage() {
        return matchPercentage;
    }

    public void setMatchPercentage(Integer matchPercentage) {
        this.matchPercentage = matchPercentage;
    }
}